--- a/mutual-funds.html
+++ b/mutual-funds.html
@@ -49,13 +49,15 @@
                     <div class="block" data="6m">
                         <div class="card">
                             <div class="product-details">
-                                <span class="logo"><img src="imgs/hdfc-logo.jpg" alt=""></span>
                                 <div class="product-name">
-                                    <h4>HDFC Index Sensex Direct Plan Growth</h4>
-                                    <ul>
-                                        <li>Equity</li>
-                                        <li>Sectoral Fund</li>
-                                    </ul>
+                                    <span class="logo"><img src="imgs/hdfc-logo.jpg" alt=""></span>
+                                    <div>
+                                        <h4>HDFC Index Sensex Direct Plan Growth</h4>
+                                        <ul>
+                                            <li>Equity</li>
+                                            <li>Sectoral Fund</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="product-returns">
                                     <span>6M return</span>
@@ -82,13 +84,15 @@
                     <div class="block" data="6m">
                         <div class="card">
                             <div class="product-details">
-                                <span class="logo"><img src="imgs/hdfc-logo.jpg" alt=""></span>
                                 <div class="product-name">
-                                    <h4>HDFC Index Sensex Direct Plan Growth</h4>
-                                    <ul>
-                                        <li>Equity</li>
-                                        <li>Sectoral Fund</li>
-                                    </ul>
+                                    <span class="logo"><img src="imgs/hdfc-logo.jpg" alt=""></span>
+                                    <div>
+                                        <h4>HDFC Index Sensex Direct Plan Growth</h4>
+                                        <ul>
+                                            <li>Equity</li>
+                                            <li>Sectoral Fund</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="product-returns">
                                     <span>6M return</span>
@@ -115,13 +119,15 @@
                     <div class="block" data="3m">
                         <div class="card">
                             <div class="product-details">
-                                <span class="logo"><img src="imgs/hdfc-logo.jpg" alt=""></span>
                                 <div class="product-name">
-                                    <h4>HDFC Index Sensex Direct Plan Growth</h4>
-                                    <ul>
-                                        <li>Equity</li>
-                                        <li>Sectoral Fund</li>
-                                    </ul>
+                                    <span class="logo"><img src="imgs/hdfc-logo.jpg" alt=""></span>
+                                    <div>
+                                        <h4>HDFC Index Sensex Direct Plan Growth</h4>
+                                        <ul>
+                                            <li>Equity</li>
+                                            <li>Sectoral Fund</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="product-returns">
                                     <span>3M return</span>
@@ -148,13 +154,15 @@
                     <div class="block" data="1y">
                         <div class="card">
                             <div class="product-details">
-                                <span class="logo"><img src="imgs/mirai-logo.jpg" alt=""></span>
                                 <div class="product-name">
-                                    <h4>Mirae Asset Large Cap Fund Direct Growth</h4>
-                                    <ul>
-                                        <li>Equity</li>
-                                        <li>Sectoral Fund</li>
-                                    </ul>
+                                    <span class="logo"><img src="imgs/mirai-logo.jpg" alt=""></span>
+                                    <div>
+                                        <h4>Mirae Asset Large Cap Fund Direct Growth</h4>
+                                        <ul>
+                                            <li>Equity</li>
+                                            <li>Sectoral Fund</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="product-returns">
                                     <span>1Y return</span>
@@ -181,13 +189,15 @@
                     <div class="block" data="3y">
                         <div class="card">
                             <div class="product-details">
-                                <span class="logo"><img src="imgs/mirai-logo.jpg" alt=""></span>
                                 <div class="product-name">
-                                    <h4>Mirae Asset Large Cap Fund Direct Growth</h4>
-                                    <ul>
-                                        <li>Equity</li>
-                                        <li>Sectoral Fund</li>
-                                    </ul>
+                                    <span class="logo"><img src="imgs/mirai-logo.jpg" alt=""></span>
+                                    <div>
+                                        <h4>Mirae Asset Large Cap Fund Direct Growth</h4>
+                                        <ul>
+                                            <li>Equity</li>
+                                            <li>Sectoral Fund</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="product-returns">
                                     <span>1Y return</span>
@@ -214,13 +224,15 @@
                     <div class="block" data="5y">
                         <div class="card">
                             <div class="product-details">
-                                <span class="logo"><img src="imgs/hdfc-logo.jpg" alt=""></span>
                                 <div class="product-name">
-                                    <h4>HDFC Index Sensex Direct Plan Growth</h4>
-                                    <ul>
-                                        <li>Equity</li>
-                                        <li>Sectoral Fund</li>
-                                    </ul>
+                                    <span class="logo"><img src="imgs/hdfc-logo.jpg" alt=""></span>
+                                    <div>
+                                        <h4>HDFC Index Sensex Direct Plan Growth</h4>
+                                        <ul>
+                                            <li>Equity</li>
+                                            <li>Sectoral Fund</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="product-returns">
                                     <span>5Y return</span>
