--- a/portfolio-analysis.html
+++ b/portfolio-analysis.html
@@ -49,7 +49,7 @@
         </header>
         <main>
             <div class="chart">
-                <div id="chart_div" style="width: 100%; height: 300px;"></div>
+                <div id="chart_div"></div>
             </div>
             <div class="performance">
                 <div class="performance-info">
